fix nts-fixed-table overflow

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/002/a/kmk002.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/002/a/kmk002.a.style.css
@@ -31,3 +31,6 @@
 .inp-formula-required {
 	width: 130px;
 }
+.nts-fixed-table .nts-fixed-body-container {
+	overflow: visible !important;
+}
